Working on travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ php:
 
 before_script:
 - composer install --dev
+
+script: phpunit --bootstrap tests/bootstrap.php tests/TwitchTest.php -c phpunit.xml
