--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,6 @@
     "guzzlehttp/guzzle": "^6.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5",
-    "php-vcr/php-vcr": "^1",
-    "php-vcr/phpunit-testlistener-vcr": "^1"
+    "phpunit/phpunit": "^5"
   }
 }
